# ShahrAra

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt  seed.py  shahr_ara.db
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  notifications.py  requests.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_health.py  test_requests.py
docs/: شرح پروژه شهرآرا.docx
docs/charts/: burndown.py  growth_forecast.py  kpi_dashboard.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AdminPanel.tsx  AuthModal.tsx  ErrorBoundary.tsx  Hero.tsx  LogoutModal.tsx  MapComponent.tsx  Navbar.tsx  ReportsDirectory.tsx  RequestForm.tsx  StatsSection.tsx  UserProfile.tsx  mode-toggle.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  date-picker.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  radio-group.tsx  select.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx
frontend/src/utils/: apiCache.ts  numberUtils.ts  persianDate.ts  regionUtils.ts
logo/: شهرآرا.ai
scripts/: ascii_logo.py
