[project]
name = "shahr-ara-backend"
version = "1.1.0"
description = "ShahrAra - Municipal Engagement System Backend"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501", "N802", "N803", "N815"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -q"
